<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StomatoloskaOrdinacija"
    android:background="@drawable/menu"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="204dp"
        android:layout_height="129dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image2"
        app:srcCompat="@drawable/logo2"
        />

    <Button
        android:id="@+id/id_zakazi_pregled"
        android:layout_width="273dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp"
        android:background="@drawable/button_background"
        android:text="@string/zakazi_pregled"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/id_pregledi"
        android:layout_width="273dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="286dp"
        android:background="@drawable/button_background"
        android:text="@string/moji_pregledi"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/id_filter"
        android:layout_width="273dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="396dp"
        android:background="@drawable/button_background"
        android:text="@string/zaposleni"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/id_logout"
        android:layout_width="273dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="509dp"
        android:background="@drawable/button_background"
        android:text="@string/logout"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textStyle="bold" />




    </RelativeLayout>


</ScrollView>