<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dentist_login3"
    tools:context=".doktor_login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="502dp"
        android:background="@drawable/button_background2"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_pacijent"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="560dp"
        android:background="@drawable/button_background2"
        android:text="Izlaz"
        android:textColor="@android:color/white" />



</RelativeLayout>